Membuat header dan footer

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Latihan GIT</title>
 </head>
 <body>
+
+    <header>Di sini adalah header</header>
+
     <h1>PT. Maju Sejahtera</h1>
 
     <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi magnam illum doloremque perferendis, eius fugiat hic corporis consequuntur eos nihil quam delectus quod, voluptatum repellendus repudiandae laborum nemo dolorem nulla.</div>
+
+    <footer>Ini adalah footer</footer>
+
 </body>
 </html>
