Mengubah bagian tag <div>

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
     <h1>PT. Maju Sejahtera</h1>
 
-    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi magnam illum doloremque perferendis, eius fugiat hic corporis consequuntur eos nihil quam delectus quod, voluptatum repellendus repudiandae laborum nemo dolorem nulla.</div>
+    <div>Ini adalah halaman about berisi informasi tentang kami.</div>
 
     <footer>Ini adalah footer</footer>
 
